deploy/k8s/overlays/prod/deces-backend.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deces-backend
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        k8s.scaleway.com/pool-name: matchid
      containers:
        - name: deces-backend
          resources:
            requests:
              cpu: 200m
              memory: 1Gi
            limits:
              cpu: 1500m
              memory: 2Gi
          volumeMounts:
            - name: userdb
              mountPath: /run/secrets/deces-backend/userDB.json
              subPath: userDB.json
              readOnly: true
      volumes:
        - name: userdb
          secret:
            secretName: deces-backend-userdb
