deploy/k8s/overlays/prod/deces-ui.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deces-ui
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        k8s.scaleway.com/pool-name: matchid
