deploy/k8s/overlays/prod/redis.prod.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        k8s.scaleway.com/pool-name: matchid
      tolerations:
        - key: dedicated
          operator: Equal
          value: matchid
          effect: NoSchedule
      containers:
        - name: redis
          args:
            - redis-server
            - --appendonly
            - "yes"
            - --appendfsync
            - everysec
            - --dir
            - /data
            - --maxmemory
            - 384mb
            - --maxmemory-policy
            - noeviction
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 512Mi
